Archive2/10/57a69cbe805cb3/output
+ g++-4.8 -std=c++1y -O2 -Wall -pedantic -pthread main.cpp
main.cpp:1:9: error: ‘boost’ does not name a type
 typedef boost::variant<FileAttributes, EnableTelemetry, DefineBinaryData, PlaceObject, PlaceObject2, PlaceObject3, RemoveObject, RemoveObject2, ShowFrame, SetBackgroundColor, FrameLabel, Protect, End, ExportAssets, ImportAssets, EnableDebugger, EnableDebugger2, ScriptLimits, SetTabIndex, ImportAssets2, SymbolClass, Metadata, DefineScalingGrid, DefineSceneAndFrameLabelData, DefineShape, DefineShape2, DefineShape3, DefineShape4, DefineFont, DefineFontInfo, DefineFontInfo2, DefineFont2, DefineFont3, DefineFontAlignZones, DefineFontName, DefineText, DefineText2, DefineEditText, CSMTextSettings, DefineFont4, DefineSound, StartSound, StartSound2, SoundStreamHead, SoundStreamHead2, SoundStreamBlock, DefineButton, DefineButton2, DefineButtonCxform, DefineButtonSound, DefineSprite, DefineVideoStream, VideoFrame, DoAction, Play, Stop, NextFrame, PreviousFrame, GotoFrame, GotoLabel, WaitForFrame, GetURL, StopSounds, ToggleQuality, SetTarget, Add, Divide, Multiply, Subtract, Equals, Less, And, Not, Or, StringAdd, StringEquals, StringExact, StringLength, MBStringExact, MBStringLength, StringLess, Pop, Push, AsciiToChar, CharToAscii, ToInteger, MBAsciiToChar, MBCharToAscii, Call, If, Jump, GetVariable, SetVariable, GetURL2, GetProperty, GotoFrame2, RemoveSprite, SetProperty, SetTarget2, StartDrag, WaitForFrame2, CloneSprite, EndDrag, Trace, GetTime, RandomNumber, CallFunction, CallMethod, ConstantPool, DefineFunction, DefineLocal, DefineLocal2, Delete, Delete2, Enumerate, Equals2, GetMember, InitArray, InitObject, NewMethod, NewObject, SetMember, TargetPath, With, ToNumber, ToString, TypeOf, Add2, Less2, Modulo, BitAnd, BitLShift, BitOr, BitRShift, BitURShift, Decrement, Increment, PushDuplicate, Return, StackSwap, StoreRegister, DoInitAction, InstanceOf, Enumerate2, StrictEquals, Greater, StringGreater, DefineFunction2, Extends, CastOp, ImplementsOp, Try, Throw, DoABC> Tag;
         ^
